/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-10-29  Gilles Dumortier <dgil at ieee.org>
	* assertionError (SF bug 1579983)
	* Alternext : not access view graph (SF bug 1586254)

2006-10-28  Gilles Dumortier <dgil at ieee.org>
	* Can't remove a file (SF bug 1586418)

2006-10-26  Gilles Dumortier <dgil at ieee.org>
	* Graph : display in-use period (SF bug 1339926)
	* view live : not access with RINV (SF bug 1567054)

2006-10-24  Gilles Dumortier <dgil at ieee.org>
	* quotes.txt : error in a NYSE quote (SF bug 1561805) : filter name by
	  removing any ';' character

2006-10-21  Gilles Dumortier <dgil at ieee.org>
	* Memory problem loading many portolios (SF bug 1565374)

2006-10-20  Gilles Dumortier <dgil at ieee.org>
	* Convert to using the wx namespace (SF bug 1500964)
	* migrate to wxPython 2.7.x (SF bug 1581494) - not working yet

2006-09-22  Gilles Dumortier <dgil at ieee.org>
	* Another fix on SF bug 1557368 (another KeyError)
	* Live : remove traces in CONSOLE (better perf)

2006-09-20  Gilles Dumortier <dgil at ieee.org>
	* create a specific branch to follow development on new quote
	  referencing mechanism (see SF bug 1525716)
	  branch name : ITRADE_0_4_5_new_quote_reference

2006-09-13  Gilles Dumortier <dgil at ieee.org>
	* Live : invalid clock display (SF bug 1557680)
	* Live : bad indication "Disconnected" (SF bug 1549599)
	* Live : live -2 or 0 instead of ATP / MX  (SF bug 1557631)
	* Live : Live: CMP can be empty !  (SF bug 1557629)

2006-09-13  Michel Legrand <m_leg at users.sourceforge.net>
	* Live: Updated data/places.txt file

2006-09-12  Gilles Dumortier <dgil at ieee.org>
	* Live : FMP Buy/Sell is inversed  (SF bug 1557356)
	* Live : exception because Notebook can be limited (SF bug 1557368)
	* Live : freeze before Euronext opening (SF bug 1552404 Patch1)
